<resources>
    <string name="app_name">TechAtDoor</string>
    <string name="image">Image</string>
    <string name="your_search_ends_today">Your Search Ends Today !!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="providing_best_technicians_at_your_doorsteps">Providing best technicians at your doorsteps</string>
    <string name="as_technician">As Technician</string>
    <string name="as_user">AS USER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_continue">Continue</string>
    <string name="title_activity_user_dashboard">Map</string>
</resources>