<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1"
        tools:context=".SignUpTechnicianActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/techatdoor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/sign_up"
                    android:textColor="#846621"
                    android:textSize="50sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

                <ImageView
                    android:id="@+id/text_tech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/technician"
                    app:layout_constraintEnd_toEndOf="@id/txtSignUp"
                    app:layout_constraintTop_toBottomOf="@id/txtSignUp" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtSignUp" />

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/mobile_number"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@id/edtUsername"
                    app:layout_constraintStart_toStartOf="@id/edtUsername"
                    app:layout_constraintTop_toBottomOf="@id/edtUsername" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@id/edtMobile"
                    app:layout_constraintStart_toStartOf="@id/edtMobile"
                    app:layout_constraintTop_toBottomOf="@id/edtMobile" />

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@id/edtPassword"
                    app:layout_constraintStart_toStartOf="@id/edtPassword"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword" />

                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_button_bg"
                    android:text="@string/btn_continue"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/edtConfirmPassword"
                    app:layout_constraintStart_toStartOf="@id/edtConfirmPassword"
                    app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>